the convention for naming schema files is longlowercasenamelikethis.jsonnet, so trigger-TimingTriggerCandidateMaker-schema.jsonnet should be renamed timingtriggercandidatemaker.jsonnet; include plugin in CMakeList.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ daq_add_library( LINK_LIBRARIES appfwk::appfwk logging::logging)
 # Plugins
 
 # daq_add_plugin(... ... LINK_LIBRARIES trigger)
+daq_add_plugin(TimingTriggerCandidateMaker duneDAQModule LINK_LIBRARIES trigger)
 
 ##############################################################################
 # Integration tests
