--- a/.github/workflows/dunedaq-develop-cpp-ci.yml
+++ b/.github/workflows/dunedaq-develop-cpp-ci.yml
@@ -70,6 +70,12 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: ${{ github.repository }}
+        
+    - name: checkout triggeralgs for CI
+      uses: actions/checkout@v2
+      with:
+        repository: DUNE-DAQ/triggeralgs
+        path: ${{ github.repository }}
     
     - name: setup build env and build the dev release
       run: |
@@ -90,7 +96,7 @@ jobs:
           setup_ups_products dune_daqpackages || true
           setup_repo_env="SETUP_$REPO"
           [[ -z ${!setup_env_repo+x} ]] || unsetup $REPO
-          cp -pr $GITHUB_WORKSPACE/DUNE-DAQ/$REPO $GITHUB_WORKSPACE/dev/sourcecode
+          cp -pr $GITHUB_WORKSPACE/DUNE-DAQ/* $GITHUB_WORKSPACE/dev/sourcecode
           export DBT_INSTALL_DIR=${DBT_AREA_ROOT}/install
           export DBT_SETUP_BUILD_ENVIRONMENT_SCRIPT_SOURCED=1
           dbt-build.sh --install
