--- a/.github/workflows/dunedaq-develop-cpp-ci.yml
+++ b/.github/workflows/dunedaq-develop-cpp-ci.yml
@@ -13,19 +13,10 @@ on:
     - cron: "0 7 * * *"
 
   workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Manual start the CI workflow'
-        # Default value if no value is explicitly provided
-        default: 'Yes'
-        # Input has to be provided for the workflow to run
-        required: true
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   Build_against_dev_release:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -41,8 +32,6 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     
-    - name: Start the CI
-      run: echo "Start the CI anyway ${{ github.event.inputs.name }}"
 
     - name: Checkout daq-buildtools
       uses: actions/checkout@v2
@@ -56,7 +45,7 @@ jobs:
         repository: DUNE-DAQ/daq-release
         path: daq-release
         
-    - name: setup dev area and checkout code
+    - name: setup dev area
       run: |
           export REPO=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')
           export DBT_ROOT=$GITHUB_WORKSPACE/daq-buildtools
@@ -65,17 +54,17 @@ jobs:
           dbt-create.sh -r /releases dunedaq-develop dev
           cd dev
           cp $GITHUB_WORKSPACE/daq-release/configs/dunedaq-develop/release_manifest.sh .
-          export BR="develop"
-          [[ -z ${!GITHUB_SHA+x} ]] || export BR=$GITHUB_SHA
-          $GITHUB_WORKSPACE/daq-release/scripts/checkout-package.sh -f ./release_manifest.sh -n -p $REPO -b ${BR} -o sourcecode
           
-    - name: checkout triggeralgs for CI
+    - name: checkout package for CI
       uses: actions/checkout@v2
       with:
-        repository: DUNE-DAQ/triggeralgs
         path: ${{ github.repository }}
-        ref: develop
-
+      
+    - name: checkout triggeralgs
+      uses: actions/checkout@v2
+      with:
+        path: $GITHUB_WORKSPACE/DUNE-DAQ/triggeralgs
+    
     - name: setup build env and build the dev release
       run: |
           export REPO=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')
@@ -95,12 +84,12 @@ jobs:
           setup_ups_products dune_daqpackages || true
           setup_repo_env="SETUP_$REPO"
           [[ -z ${!setup_env_repo+x} ]] || unsetup $REPO
-          cp -pr $GITHUB_WORKSPACE/DUNE-DAQ/triggeralgs $GITHUB_WORKSPACE/dev/sourcecode
+          cp -pr $GITHUB_WORKSPACE/DUNE-DAQ/* $GITHUB_WORKSPACE/dev/sourcecode
           export DBT_INSTALL_DIR=${DBT_AREA_ROOT}/install
           export DBT_SETUP_BUILD_ENVIRONMENT_SCRIPT_SOURCED=1
           dbt-build.sh --install
           $GITHUB_WORKSPACE/daq-release/scripts/upsify-daq-pkgs.py -w $GITHUB_WORKSPACE/dev -o /tarballs
-
+          
     - name: upload UPS tarball and log file
       uses: actions/upload-artifact@v2
       with:
@@ -112,4 +101,3 @@ jobs:
       with:
         name: build_log
         path: ${{ github.workspace }}/dev/log
-        
