--- a/.github/workflows/dunedaq-develop-cpp-ci.yml
+++ b/.github/workflows/dunedaq-develop-cpp-ci.yml
@@ -63,6 +63,7 @@ jobs:
     - name: checkout triggeralgs
       uses: actions/checkout@v2
       with:
+        repository: DUNE-DAQ/daq-buildtools
         path: $GITHUB_WORKSPACE/DUNE-DAQ/triggeralgs
     
     - name: setup build env and build the dev release
@@ -86,7 +87,7 @@ jobs:
           [[ -z ${!setup_env_repo+x} ]] || unsetup $REPO
           cp -pr $GITHUB_WORKSPACE/DUNE-DAQ/* $GITHUB_WORKSPACE/dev/sourcecode
           ls $GITHUB_WORKSPACE/dev/sourcecode
-          sed -i '$ s/)/"triggeralgs" "trigger")/g' dbt-build-order.cmake
+          sed -i '$ s/)/"triggeralgs" "trigger")/g' sourcecode/dbt-build-order.cmake
           export DBT_INSTALL_DIR=${DBT_AREA_ROOT}/install
           export DBT_SETUP_BUILD_ENVIRONMENT_SCRIPT_SOURCED=1
           dbt-build.sh --install
