--- a/.github/workflows/dunedaq-develop-cpp-ci.yml
+++ b/.github/workflows/dunedaq-develop-cpp-ci.yml
@@ -86,7 +86,7 @@ jobs:
           setup_repo_env="SETUP_$REPO"
           [[ -z ${!setup_env_repo+x} ]] || unsetup $REPO
           cp -pr $GITHUB_WORKSPACE/DUNE-DAQ/* $GITHUB_WORKSPACE/dev/sourcecode
-          tree $GITHUB_WORKSPACE/dev/sourcecode
+          ls $GITHUB_WORKSPACE/dev/sourcecode/*
           ls $GITHUB_WORKSPACE/dev/sourcecode
           sed -i '$ s/)/"triggeralgs" "trigger")/g' sourcecode/dbt-build-order.cmake
           export DBT_INSTALL_DIR=${DBT_AREA_ROOT}/install
