--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,8 @@ daq_add_plugin(IntervalTCCreator duneDAQModule LINK_LIBRARIES trigger TEST)
 ##############################################################################
 # Unit Tests
 
-# daq_add_unit_test(ComponentRequest_test        LINK_LIBRARIES trigger)
+daq_add_unit_test(TimestampEstimatorSystem_test  LINK_LIBRARIES trigger)
+daq_add_unit_test(TimestampEstimator_test        LINK_LIBRARIES trigger)
 
 ##############################################################################
 
