Add to Set an origin as type GeoID.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,11 @@ daq_add_plugin(FakeTimeStampedDataGenerator duneDAQModule LINK_LIBRARIES trigger
 daq_add_plugin(FakeDataFlow duneDAQModule LINK_LIBRARIES trigger TEST)
 daq_add_plugin(FakeTPCreatorHeartbeatMaker duneDAQModule LINK_LIBRARIES trigger)
 
+#daq_add_plugin(TPZipper duneDAQModule LINK_LIBRARIES trigger)
+#daq_add_plugin(TAZipper duneDAQModule LINK_LIBRARIES trigger)
+#daq_add_plugin(TCZipper duneDAQModule LINK_LIBRARIES trigger)
+
+
 # Algorithm plugins
 daq_add_plugin(TriggerActivityMakerSupernovaPlugin duneTAMaker LINK_LIBRARIES trigger)
 daq_add_plugin(TriggerCandidateMakerSupernovaPlugin duneTCMaker LINK_LIBRARIES trigger)
