Add functions to read/write TP fragments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,14 @@ find_package(logging REQUIRED)
 find_package(appfwk REQUIRED)
 find_package(triggeralgs REQUIRED)
 find_package(dfmessages REQUIRED)
+find_package(dataformats REQUIRED)
 find_package(timinglibs REQUIRED)
 find_package(nwqueueadapters REQUIRED)
 
 ##############################################################################
 # Main library
 
-daq_add_library(TokenManager.cpp LivetimeCounter.cpp LINK_LIBRARIES appfwk::appfwk logging::logging dfmessages::dfmessages triggeralgs::triggeralgs)
+daq_add_library(TokenManager.cpp LivetimeCounter.cpp FragmentMakers.cpp LINK_LIBRARIES appfwk::appfwk logging::logging dfmessages::dfmessages dataformats::dataformats triggeralgs::triggeralgs)
 
 ##############################################################################
 # Codegen
@@ -70,6 +71,7 @@ daq_add_application( taset_serialization taset_serialization.cxx TEST LINK_LIBRA
 daq_add_unit_test(TokenManager_test              LINK_LIBRARIES trigger)
 daq_add_unit_test(LivetimeCounter_test           LINK_LIBRARIES trigger)
 daq_add_unit_test(TxSet_test                     LINK_LIBRARIES trigger)
+daq_add_unit_test(TPFragment_test                LINK_LIBRARIES trigger)
 
 ##############################################################################
 
