Update list of find_dependency calls

--- a/cmake/triggerConfig.cmake.in
+++ b/cmake/triggerConfig.cmake.in
@@ -8,6 +8,11 @@ find_dependency(Boost 1.70.0 COMPONENTS unit_test_framework)
 find_dependency(serialization)
 find_dependency(logging)
 find_dependency(appfwk)
+find_dependency(triggeralgs)
+find_dependency(dfmessages)
+find_dependency(timinglibs)
+find_dependency(nwqueueadapters)
+find_dependency(dataformats)
 
 if (EXISTS ${CMAKE_SOURCE_DIR}/@PROJECT_NAME@)
 
