--- a/cmake/triggerConfig.cmake.in
+++ b/cmake/triggerConfig.cmake.in
@@ -12,7 +12,7 @@ find_dependency(triggeralgs)
 find_dependency(dfmessages)
 find_dependency(timinglibs)
 find_dependency(nwqueueadapters)
-find_dependency(dataformats)
+find_dependency(daqdataformats)
 
 if (EXISTS ${CMAKE_SOURCE_DIR}/@PROJECT_NAME@)
 
