--- a/cmake/triggerConfig.cmake.in
+++ b/cmake/triggerConfig.cmake.in
@@ -12,6 +12,7 @@ find_dependency(dfmessages)
 find_dependency(timinglibs)
 find_dependency(nwqueueadapters)
 find_dependency(daqdataformats)
+find_dependency(detdataformats)
 find_dependency(networkmanager)
 find_dependency(utilities)
 
