--- a/cmake/triggerConfig.cmake.in
+++ b/cmake/triggerConfig.cmake.in
@@ -15,6 +15,8 @@ find_dependency(daqdataformats)
 find_dependency(detdataformats)
 find_dependency(networkmanager)
 find_dependency(utilities)
+find_dependency(hdf5libs)
+find_dependency(CLI11)
 
 if (EXISTS ${CMAKE_SOURCE_DIR}/@PROJECT_NAME@)
 
